--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -96,8 +96,7 @@
                         <img src="/static/assets/img/icon/service-2.png" alt="icon">
                         <h3>UAE Tours</h3>
                         <p>
-                            Id aliquip qui dolore enim ea deserunt quis. Consectetur nostrud labore cupidatat proident
-                            voluptate voluptate laboris ad ex eiusmod proident adipisicing enim.
+                           Touch of local tours in UAE.Call or book instant online with best offers.
                         </p>
                     </div>
                 </div>
@@ -106,8 +105,7 @@
                         <img src="/static/assets/img/icon/service-3.png" alt="icon">
                         <h3>Outbounds</h3>
                         <p>
-                            Exercitation ullamco reprehenderit amet nulla mollit do sunt. Id consequat nostrud amet
-                            cillum do consectetur esse occaecat tempor reprehenderit ullamco sit aliqua liqua irure.
+                            Call our holiday expert to plan your ourbound tour.
                         </p>
                     </div>
                 </div>
@@ -116,8 +114,7 @@
                         <img src="/static/assets/img/icon/service-4.png" alt="icon">
                         <h3>Visa</h3>
                         <p>
-                            Voluptate esse culpa cupidatat irure occaecat. Laborum consectetur qui laborum nostrud et.
-                            Nostrud do aliqua cillum id adipisicing anim. Id labore enim esse est
+                            Inbound and global visa servies.
                         </p>
                     </div>
                 </div>
@@ -126,9 +123,7 @@
                         <img src="/static/assets/img/icon/service-5.png" alt="icon">
                         <h3>Attractions</h3>
                         <p>
-                            Quis aliqua irure velit ipsum et et ipsum irure qui ut mollit sunt eiusmod do. Sunt elit
-                            excepteur culpa irure elit ea culpa adipisicing. Sit officia consequat
-                            excepteur
+                            Book only attraction ticket with us.
                         </p>
                     </div>
                 </div>
@@ -137,9 +132,7 @@
                         <img src="/static/assets/img/icon/service-6.png" alt="icon">
                         <h3>Transfers</h3>
                         <p>
-                            Labore anim culpa sint minim eu tempor cillum esse eiusmod. Sint
-                            exercitation nulla qui non nostrud. Reprehenderit commodo duis ullamco anim. Incididunt
-                            deserunt
+                            Return Airport transfers, Hotels Transfer with luxury and economy options
                         </p>
                     </div>
                 </div>
@@ -375,7 +368,7 @@
                 </div>
                 <div class="col-lg-7 col-md-12 col-sm-12 col-12">
                     <div class="about_two_left_img">
-                        <img src="/static/assets/img/common/about_two.png" alt="img">
+                        <img src="static/assets/img/home/multi-services.jpg" alt="img">
                     </div>
                 </div>
             </div>
@@ -390,28 +383,27 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="partner_area_left">
-                            <h5>Find your best travel partner</h5>
-                            <h2>Prepare yourself and let’s enjoy
-                                the beauty of the world</h2>
-                            <p>Sint est eu sit ipsum enim amet esse sunt incididunt. Occaecat aliquip commodo ipsum
-                                officia in Lorem commodo aliquip dolore. Nisi domip excepteur commodo ea nostrud mollit.
+                            <h5 class="text-light">Find our Signature tour</h5>
+                            <h2 class="text-light">Prepare yourself and let’s enjoy
+                                the beauty of Evening Desert Safari Dubai</h2>
+                            <p class="text-light">Pick and Drop , DUne Bashing (Lahbab), Sand Boarding, Camel Rides, Sheesha, Live BBQ, Buffet, Live Shows...
                             </p>
                             <div class="partner_video_area">
-                                <a class="video_btn video_play_area" href="https://www.youtube.com/watch?v=_2LLXnUdUIc"
+                                <a class="video_btn video_play_area" href="https://www.youtube.com/watch?v=7W9SKUJlzik"
                                     title="Youtube Video"><i class="fas fa-play"></i></a>
                             </div>
                             <div class="local_counter_area">
                                 <div class="local_counter_box">
-                                    <h2>12K</h2>
+                                    <h2>7H</h2>
                                     <h5>Local guides</h5>
                                 </div>
                                 <div class="local_counter_box">
-                                    <h2>750+</h2>
-                                    <h5>Destinations</h5>
+                                    <h2>Own Camp</h2>
+                                    <h5>Best Food</h5>
                                 </div>
                                 <div class="local_counter_box">
-                                    <h2>100%</h2>
-                                    <h5>Happiness</h5>
+                                    <h2>4x4</h2>
+                                    <h5>vehicle</h5>
                                 </div>
                             </div>
                         </div>
@@ -639,7 +631,7 @@
                                 <img src="/static/assets/img/icon/sm-call.png" alt="icon">
                                 <div class="sm_call_number">
                                     <h5>Call now</h5>
-                                    <h2><a href="tel:+01-234-567-890">+01 234 567 890</a></h2>
+                                    <h2><a href="tel:+97143216565">+971 4 321 6565</a></h2>
                                 </div>
                             </div>
                         </div>
@@ -701,7 +693,7 @@
         </div>
     </section>
 
-    <!-- Our partners Area -->
+    {% comment %} <!-- Our partners Area -->
     <section id="our_partners" class="section_padding">
         <div class="container">
             <!-- Section Heading -->
@@ -752,12 +744,13 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> {% endcomment %}
 
 
 
 
     {% include 'frontend/whatsapp.html' %}
+    {% include 'frontend/badge.html' %}
     
     {% include 'frontend/newsletter.html' %}
    
