--- a/frontend/templates/frontend/header.html
+++ b/frontend/templates/frontend/header.html
@@ -1,4 +1,5 @@
  <!-- Header Area -->
+ {% include 'frontend/alert.html' %}
  <header class="main_header_arae">
     <!-- Top Bar -->
     <div class="topbar-area">
@@ -126,23 +127,10 @@
                                         <a href="visa-application.html" class="nav-link">Visa Application</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="visa-info.html" class="nav-link">Business visa </a>
+                                        <a href="" class="nav-link"> Global Visa Services </a>
                                     </li>
-                                    <li class="nav-item">
-                                        <a href="visa-info.html" class="nav-link">Education visa </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="visa-info.html" class="nav-link">Working visa </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="visa-info.html" class="nav-link">Tourist visa </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="visa-info.html" class="nav-link">Medical visa </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="visa-info.html" class="nav-link">On-arrival visa </a>
-                                    </li>
+                                    
+                                   
                                 </ul>
                             </li>
                             <li class="nav-item">
