--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -78,7 +78,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                     <div class="section_heading_center">
-                        <h2>And tour top services</h2>
+                        <h2>Arabian Knights top services</h2>
                     </div>
                 </div>
             </div>
