--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -54,13 +54,13 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="banner_two_text">
-                                <h3 class="title">BEST TRAVEL AGENCY</h3>
+                                <h3 class="title">DESTINATION MANAGEMENT COMPANY IN DUBAI</h3>
                                 <h1 class="slider-sttle">EXPLORE</h1>
                                 <h2 class="slider-pararp">The world with us!</h2>
-                                <h4 class="slider-pararp">Find awesome flights, hotel, tour, car and packages</h4>
+                                <h4 class="slider-pararp">Find awesome flights, hotel, tour, car retanl and packages</h4>
                                 <div class="home_two_button btn-animation">
-                                    <a href="top-destinations.html" class="btn btn_theme_white btn_md">Discover</a>
-                                    <a href="top-destinations.html" class="btn btn_theme_transparent btn_md">Know
+                                    <a href="{% url 'all-tours-grid' %}" class="btn btn_theme_white btn_md">Discover</a>
+                                    <a href="{% url 'outbounds' %}" class="btn btn_theme_transparent btn_md">Know
                                         more</a>
                                 </div>
                             </div>
@@ -168,17 +168,16 @@
                                                 <i class="fas fa-star"></i>
                                                 <h5>5 Out of 5</h5>
                                             </div>
-                                            <h3>China | $6000</h3>
-                                            <h4>8 days 7 nights</h4>
-                                            <p>Cupidatat consectetur ea cillum nt
-                                                consectetur excepteur.</p>
+                                            <h3>Albania | Aed 6000</h3>
+                                            <h4>4 days 3 nights</h4>
+                                            <p>3 nights’ accommodation in 4* hotel Daily Breakfast Tirana city tour on Private Airport transfers on Private</p>
                                         </div>
                                     </div>
                                 </a>
                             </div>
                             <div class="holiday_small_boxed">
                                 <a href="top-destinations-details.html">
-                                    <img src="/static/assets/img/holiday-img/holiday-2.png" alt="img">
+                                    <img src="/static/assets/img/holiday-img/Tirane.jpg" alt="img">
                                     <div class="holiday_small_box_content">
                                         <div class="holiday_inner_content">
                                             <div class="rating_outof">
