--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -57,7 +57,7 @@
                                 <h3 class="title">DESTINATION MANAGEMENT COMPANY IN DUBAI</h3>
                                 <h1 class="slider-sttle">EXPLORE</h1>
                                 <h2 class="slider-pararp">The world with us!</h2>
-                                <h4 class="slider-pararp">Find awesome flights, hotel, tour, car retanl and packages</h4>
+                                <h4 class="slider-pararp">Find awesome hotels, tours, car retanl and Holiday packages</h4>
                                 <div class="home_two_button btn-animation">
                                     <a href="{% url 'all-tours-grid' %}" class="btn btn_theme_white btn_md">Discover</a>
                                     <a href="{% url 'outbounds' %}" class="btn btn_theme_transparent btn_md">Know
