--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -54,7 +54,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="banner_two_text">
-                                <h3 class="title">DESTINATION MANAGEMENT COMPANY IN DUBAI</h3>
+                                <h3 class="title">DESTINATION MANAGEMENT COMPANY </h3>
                                 <h1 class="slider-sttle">EXPLORE</h1>
                                 <h2 class="slider-pararp">The world with us!</h2>
                                 <h4 class="slider-pararp">Find awesome hotels, tours, car retanl and Holiday packages</h4>
