--- a/frontend/templates/frontend/header.html
+++ b/frontend/templates/frontend/header.html
@@ -65,7 +65,7 @@
                 <div class="main-responsive-menu">
                     <div class="logo">
                         <a href="">
-                            <img src="/static/assets/img/akt_logo_l.pngg" alt="logo" width="70">
+                            <img src="/static/assets/img/akt_logo_l.png" alt="logo" width="70">
                         </a>
                     </div>
                 </div>
