--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -14,7 +14,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6 bg-success p-4 shadow-sm ">
                             <div class="banner_two_text">
-                                <h3 class="title">BEST TRAVEL AGENCY</h3>
+                                <h3 class="title">DESTINATION MANAGEMENT COMPANY IN DUBAI</h3>
                                 <h1 class="slider-sttle">EXPLORE</h1>
                                 <h2 class="slider-pararp">UAE with us!</h2>
                                 <h4 class="slider-pararp">Find awesome UAE tours, hotels, tours, cars and packages and Top rated Desert Safari in dubai</h4>
