--- a/outbounds/templates/outbounds/outbounds.html
+++ b/outbounds/templates/outbounds/outbounds.html
@@ -169,7 +169,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                     <div class="section_heading_center">
-                        <h2>19 destinations found</h2>
+                        <h2>{{ city_count }} destination found</h2>
                     </div>
                 </div>
             </div>
@@ -361,8 +361,8 @@
                                 <a href=""><img src="{{city.thumbnail.url}}"
                                         alt="img"></a>
                                 <div class="top_destinations_box_content">
-                                    <h4><a href="{% url 'outbound-detail' city.slug %}">{{ city.name }} - </a></h4>
-                                    <p><span class="review_rating">{{ city.no_of_days}} Days {{city.no_of_nights}} Nights</span> <span
+                                    <h4><a href="{% url 'outbound-detail' city.slug %}">{{ city.name }} </a></h4>
+                                    <p><span class="review_rating">{{ city.no_of_days}} Days  - {{city.no_of_nights}} Nights</span> <span
                                             class="review_count"></span></p>
                                     <h3>99.00 <span>Price starts from</span></h3>
                                 </div>
