--- a/outbounds/templates/outbounds/outbounds.html
+++ b/outbounds/templates/outbounds/outbounds.html
@@ -352,13 +352,13 @@
                 </div>
                 <div class="col-lg-9">
                     <div class="row">
-                        {% for city in outbounds %}
+                        {% for city in outbounds_filter %}
                         <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                             <div class="top_destinations_box img_hover">
                                 <div class="heart_destinations">
                                     <i class="fas fa-heart"></i>
                                 </div>
-                                <a href=""><img src="{{city.thumbnail.url}}"
+                                <a href="{% url 'outbound-detail' city.slug %}"><img src="{{city.thumbnail.url}}"
                                         alt="img"></a>
                                 <div class="top_destinations_box_content">
                                     <h4><a href="{% url 'outbound-detail' city.slug %}">{{ city.name }} </a></h4>
@@ -369,86 +369,9 @@
                             </div>
                         </div>
                         {% endfor %}
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                            <div class="top_destinations_box img_hover">
-                                <div class="heart_destinations">
-                                    <i class="fas fa-heart"></i>
-                                </div>
-                                <a href="top-destinations-details.html"><img src="/static/assets/img/destination/main-page2.png"
-                                        alt="img"></a>
-                                <div class="top_destinations_box_content">
-                                    <h4><a href="top-destinations-details.html">Explore china</a></h4>
-                                    <p><span class="review_rating">4.8/5 Excellent</span> <span
-                                            class="review_count">(1214
-                                            reviewes)</span></p>
-                                    <h3>$99.00 <span>Price starts from</span></h3>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                            <div class="top_destinations_box img_hover">
-                                <div class="heart_destinations">
-                                    <i class="fas fa-heart"></i>
-                                </div>
-                                <a href="top-destinations-details.html"><img src="/static/assets/img/destination/main-page3.png"
-                                        alt="img"></a>
-                                <div class="top_destinations_box_content">
-                                    <h4><a href="top-destinations-details.html">Annapurna</a></h4>
-                                    <p><span class="review_rating">4.8/5 Excellent</span> <span
-                                            class="review_count">(1214
-                                            reviewes)</span></p>
-                                    <h3>$99.00 <span>Price starts from</span></h3>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                            <div class="top_destinations_box img_hover">
-                                <div class="heart_destinations">
-                                    <i class="fas fa-heart"></i>
-                                </div>
-                                <a href="top-destinations-details.html"><img src="/static/assets/img/destination/main-page4.png"
-                                        alt="img"></a>
-                                <div class="top_destinations_box_content">
-                                    <h4><a href="top-destinations-details.html">Beautiful darjeeling</a></h4>
-                                    <p><span class="review_rating">4.8/5 Excellent</span> <span
-                                            class="review_count">(1214
-                                            reviewes)</span></p>
-                                    <h3>$99.00 <span>Price starts from</span></h3>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                            <div class="top_destinations_box img_hover">
-                                <div class="heart_destinations">
-                                    <i class="fas fa-heart"></i>
-                                </div>
-                                <a href="top-destinations-details.html"><img src="/static/assets/img/destination/main-page5.png"
-                                        alt="img"></a>
-                                <div class="top_destinations_box_content">
-                                    <h4><a href="top-destinations-details.html">Himalaya</a></h4>
-                                    <p><span class="review_rating">4.8/5 Excellent</span> <span
-                                            class="review_count">(1214
-                                            reviewes)</span></p>
-                                    <h3>$99.00 <span>Price starts from</span></h3>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                            <div class="top_destinations_box img_hover">
-                                <div class="heart_destinations">
-                                    <i class="fas fa-heart"></i>
-                                </div>
-                                <a href="top-destinations-details.html"><img src="/static/assets/img/destination/main-page6.png"
-                                        alt="img"></a>
-                                <div class="top_destinations_box_content">
-                                    <h4><a href="top-destinations-details.html">Kathmundu</a></h4>
-                                    <p><span class="review_rating">4.8/5 Excellent</span> <span
-                                            class="review_count">(1214
-                                            reviewes)</span></p>
-                                    <h3>$99.00 <span>Price starts from</span></h3>
-                                </div>
-                            </div>
-                        </div>
+                        
+                       
+                        
                         <div class="col-lg-12">
                             <div class="pagination_area">
                                 <ul class="pagination">
