--- a/outbounds/templates/outbounds/outbounds-details.html
+++ b/outbounds/templates/outbounds/outbounds-details.html
@@ -44,8 +44,8 @@
                     <div class="tour_details_leftside_wrapper">
                         <div class="tour_details_heading_wrapper">
                             <div class="tour_details_top_heading">
-                                <h2>Explore the evergreen forest</h2>
-                                <h5><i class="fas fa-map-marker-alt"></i> Amazon evergreen forest, Amazon.</h5>
+                                <h2>Explore the {{ otour.name }}</h2>
+                                <h5><i class="fas fa-map-marker-alt"></i> </h5>
                             </div>
                             <div class="tour_details_top_heading_right">
                                 <h4>Excellent</h4>
