--- a/outbounds/templates/outbounds/outbounds.html
+++ b/outbounds/templates/outbounds/outbounds.html
@@ -361,10 +361,11 @@
                                 <a href="{% url 'outbound-detail' city.slug %}"><img src="{{city.thumbnail.url}}"
                                         alt="img"></a>
                                 <div class="top_destinations_box_content">
-                                    <h4><a href="{% url 'outbound-detail' city.slug %}">{{ city.name }} </a></h4>
+                                    <h4 ><a href="{% url 'outbound-detail' city.slug %}">{{ city.name }} </a></h4>
                                     <p><span class="review_rating">{{ city.no_of_days}} Days  - {{city.no_of_nights}} Nights</span> <span
                                             class="review_count"></span></p>
-                                    <h3>99.00 <span>Price starts from</span></h3>
+                                            {% for price in city.price.all %}
+                                    <h3>{{ price.price}} <sup>AED</sup> <span>Price starts from</span></h3> {% endfor %}
                                 </div>
                             </div>
                         </div>
