--- a/outbounds/templates/outbounds/outbounds-details.html
+++ b/outbounds/templates/outbounds/outbounds-details.html
@@ -197,7 +197,8 @@
                             <h3 class="heading_theme">Tours location</h3>
                             <div class="map_area">
                                 <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.6962663570607!2d89.56355961427838!3d22.813715829827952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ff901efac79b59%3A0x5be01a1bc0dc7eba!2sAnd+IT!5e0!3m2!1sen!2sbd!4v1557901943656!5m2!1sen!2sbd"></iframe>
+                                    src="https://maps.google.com/maps?q={{ otour.long }},{{ otour.lat }}&hl=es;z=14&amp;output=embed">
+                                </iframe>
                             </div>
                         </div>
                     </div>
