--- a/outbounds/templates/outbounds/outbounds.html
+++ b/outbounds/templates/outbounds/outbounds.html
@@ -28,7 +28,6 @@
         </div>
     </section>
 
-    <!-- Form Area -->
     <section id="theme_search_form_tour">
         <div class="container">
             <div class="row">
@@ -39,115 +38,15 @@
                                 <div class="tour_search_form">
                                     <form action="#!">
                                         <div class="row">
-                                            <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+                                            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                                                 <div class="flight_Search_boxed">
-                                                    <p>Destination</p>
-                                                    <input type="text" placeholder="Where are you going?">
-                                                    <span>Where are you going?</span>
+                                                    <p>Destinations </p>
+                                                    <input type="text" placeholder="Find your desired City">
+                                                    <span>Outbounds</span>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                                                <div class="form_search_date">
-                                                    <div class="flight_Search_boxed date_flex_area">
-                                                        <div class="Journey_date">
-                                                            <p>Journey date</p>
-                                                            <input type="date" value="2022-05-03">
-                                                            <span>Thursday</span>
-                                                        </div>
-                                                        <div class="Journey_date">
-                                                            <p>Return date</p>
-                                                            <input type="date" value="2022-05-05">
-                                                            <span>Thursday</span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-2  col-md-6 col-sm-12 col-12">
-                                                <div class="flight_Search_boxed dropdown_passenger_area">
-                                                    <p>Passenger, Class </p>
-                                                    <div class="dropdown">
-                                                        <button class="dropdown-toggle final-count"
-                                                            data-toggle="dropdown" type="button"
-                                                            id="dropdownMenuButton1" data-bs-toggle="dropdown"
-                                                            aria-expanded="false">
-                                                            0 Passenger
-                                                        </button>
-                                                        <div class="dropdown-menu dropdown_passenger_info"
-                                                            aria-labelledby="dropdownMenuButton1">
-                                                            <div class="traveller-calulate-persons">
-                                                                <div class="passengers">
-                                                                    <h6>Passengers</h6>
-                                                                    <div class="passengers-types">
-                                                                        <div class="passengers-type">
-                                                                            <div class="text"><span
-                                                                                    class="count pcount">2</span>
-                                                                                <div class="type-label">
-                                                                                    <p>Adult</p>
-                                                                                    <span>12+
-                                                                                        yrs</span>
-                                                                                </div>
-                                                                            </div>
-                                                                            <div class="button-set">
-                                                                                <button type="button" class="btn-add">
-                                                                                    <i class="fas fa-plus"></i>
-                                                                                </button>
-                                                                                <button type="button"
-                                                                                    class="btn-subtract">
-                                                                                    <i class="fas fa-minus"></i>
-                                                                                </button>
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="passengers-type">
-                                                                            <div class="text"><span
-                                                                                    class="count ccount">0</span>
-                                                                                <div class="type-label">
-                                                                                    <p class="fz14 mb-xs-0">
-                                                                                        Children
-                                                                                    </p><span>2
-                                                                                        - Less than 12
-                                                                                        yrs</span>
-                                                                                </div>
-                                                                            </div>
-                                                                            <div class="button-set">
-                                                                                <button type="button" class="btn-add-c">
-                                                                                    <i class="fas fa-plus"></i>
-                                                                                </button>
-                                                                                <button type="button"
-                                                                                    class="btn-subtract-c">
-                                                                                    <i class="fas fa-minus"></i>
-                                                                                </button>
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="passengers-type">
-                                                                            <div class="text"><span
-                                                                                    class="count incount">0</span>
-                                                                                <div class="type-label">
-                                                                                    <p class="fz14 mb-xs-0">
-                                                                                        Infant
-                                                                                    </p><span>Less
-                                                                                        than 2
-                                                                                        yrs</span>
-                                                                                </div>
-                                                                            </div>
-                                                                            <div class="button-set">
-                                                                                <button type="button"
-                                                                                    class="btn-add-in">
-                                                                                    <i class="fas fa-plus"></i>
-                                                                                </button>
-                                                                                <button type="button"
-                                                                                    class="btn-subtract-in">
-                                                                                    <i class="fas fa-minus"></i>
-                                                                                </button>
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <span>Business</span>
-                                                </div>
-                                            </div>
+                                            
+                                            
                                             <div class="top_form_search_button">
                                                 <button class="btn btn_theme btn_md">Search</button>
                                             </div>
