--- a/outbounds/templates/outbounds/inquiry_email.html
+++ b/outbounds/templates/outbounds/inquiry_email.html
@@ -27,7 +27,8 @@
 			color: inherit !important;
 			text-decoration: inherit !important;
 		}
-
+		
+		
 		#MessageViewBody a {
 			color: inherit;
 			text-decoration: none;
@@ -99,14 +100,14 @@
 						<tbody>
 							<tr>
 								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #b4dcff; color: #000000; width: 680px;" width="680">
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: green; color: #000000; width: 680px;" width="680">
 										<tbody>
 											<tr>
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-top: 0px; padding-bottom: 0px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
 													<table class="image_block block-1" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td class="pad" style="padding-bottom:10px;padding-top:10px;width:100%;padding-right:0px;padding-left:0px;">
-																<div class="alignment" align="center" style="line-height:10px"><img src="https://arabiannights.tours/static/images/ant_logo.png" style="display: block; height: auto; border: 0; width: 238px; max-width: 100%;" width="238" alt="Yourlogo Light" title="Yourlogo Light"></div>
+																<div class="alignment" align="center" style="line-height:10px"><img src="https://arabianknightstours.com/static/assets/img/akt_logo_l.png" style="display: block; height: auto; border: 0; width: 238px; max-width: 100%;" width="238" alt="Yourlogo Light" title="Yourlogo Light"></div>
 															</td>
 														</tr>
 													</table>
@@ -122,7 +123,7 @@
 						<tbody>
 							<tr>
 								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #a4cff6; color: #000000; width: 680px;" width="680">
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #efefef; color: #000000; width: 680px;" width="680">
 										<tbody>
 											<tr>
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-top: 20px; padding-bottom: 20px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
@@ -138,7 +139,7 @@
 															<td class="pad" style="padding-bottom:25px;padding-left:20px;padding-right:20px;padding-top:10px;">
 																<div style="font-family: Georgia, 'Times New Roman', serif">
 																	<div class style="font-size: 14px; font-family: Georgia, Times, 'Times New Roman', serif; mso-line-height-alt: 16.8px; color: #2f2f2f; line-height: 1.2;">
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:42px;">Booking received</span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 16.8px;"><span style="font-size:42px;">New Inquiry </span></p>
 																	</div>
 																</div>
 															</td>
@@ -149,13 +150,10 @@
 															<td class="pad" style="padding-bottom:80px;padding-left:30px;padding-right:30px;padding-top:10px;">
 																<div style="font-family: sans-serif">
 																	<div class style="font-size: 14px; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 21px; color: #2f2f2f; line-height: 1.5;">
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 24px;"><span style="font-size:16px;">Hi <strong><u>{{user}}</u></strong>,</span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 24px;"><span style="font-size:16px;">Hi <strong><u>Team</u></strong>,</span></p>
 																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 21px;">&nbsp;</p>
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 24px;"><span style="font-size:16px;">Thank you for your Booking of <strong><span style>$25.00</span></strong> on <strong><span style>Nov. 3, 2021</span></strong></span></p>
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 24px;"><span style="font-size:16px;">using <strong><span style>Bank Account ****9876</span></strong></span></p>
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 21px;">&nbsp;</p>
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 21px;"><span style="color:#000000;font-size:14px;">Lorem ipsum dolor sit amet,</span></p>
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 21px;"><span style="color:#000000;font-size:14px;">consectetur adipiscing elit lectus.</span></p>
+																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 24px;"><span style="font-size:16px;">Kindly contact to  person  </p>
+																		
 																	</div>
 																</div>
 															</td>
@@ -182,7 +180,7 @@
 															<td class="pad" style="padding-bottom:20px;padding-left:20px;padding-right:20px;padding-top:50px;">
 																<div style="font-family: sans-serif">
 																	<div class style="font-size: 14px; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: #2f2f2f; line-height: 1.2;">
-																		<p style="margin: 0; text-align: center; mso-line-height-alt: 16.8px; letter-spacing: 1px;"><strong><span style="font-size:18px;">PAYMENT DETAILS</span></strong></p>
+																		<p style="margin: 0; text-align: center; mso-line-height-alt: 16.8px; letter-spacing: 1px;"><strong><span style="font-size:18px;">Inquiry Detail</span></strong></p>
 																	</div>
 																</div>
 															</td>
@@ -209,10 +207,10 @@
 															<td class="pad" style="padding-bottom:15px;padding-left:10px;padding-right:20px;padding-top:15px;">
 																<div style="font-family: sans-serif">
 																	<div class style="font-size: 14px; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 28px; color: #393d47; line-height: 2;">
-																		<p style="margin: 0; font-size: 16px; text-align: right; mso-line-height-alt: 32px;"><strong><span style="font-size:16px;"><span style="color:#5d77a9;">Amount</span></span></strong></p>
-																		<p style="margin: 0; font-size: 16px; text-align: right; mso-line-height-alt: 32px;"><strong><span style="font-size:16px;"><span style="color:#5d77a9;">Date</span></span></strong></p>
-																		<p style="margin: 0; font-size: 16px; text-align: right; mso-line-height-alt: 32px;"><strong><span style="font-size:16px;"><span style="color:#5d77a9;">Method</span></span></strong></p>
-																		<p style="margin: 0; font-size: 16px; text-align: right; mso-line-height-alt: 32px;"><strong><span style="font-size:16px;"><span style="color:#5d77a9;">Confirmation</span></span></strong></p>
+																		<p style="margin: 0; font-size: 16px; text-align: right; mso-line-height-alt: 32px;"><strong><span style="font-size:16px;"><span style="color:#5d77a9;">Name</span></span></strong></p>
+																		<p style="margin: 0; font-size: 16px; text-align: right; mso-line-height-alt: 32px;"><strong><span style="font-size:16px;"><span style="color:#5d77a9;">Mobile</span></span></strong></p>
+																		<p style="margin: 0; font-size: 16px; text-align: right; mso-line-height-alt: 32px;"><strong><span style="font-size:16px;"><span style="color:#5d77a9;">Email</span></span></strong></p>
+																		<p style="margin: 0; font-size: 16px; text-align: right; mso-line-height-alt: 32px;"><strong><span style="font-size:16px;"><span style="color:#5d77a9;">Message</span></span></strong></p>
 																	</div>
 																</div>
 															</td>
@@ -225,9 +223,9 @@
 															<td class="pad" style="padding-bottom:10px;padding-left:20px;padding-right:10px;padding-top:10px;">
 																<div style="font-family: sans-serif">
 																	<div class style="font-size: 14px; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 28px; color: #2f2f2f; line-height: 2;">
-																		<p style="margin: 0; font-size: 16px; text-align: left; mso-line-height-alt: 32px;"><span style="font-size:16px;">AED</span></p>
 																		<p style="margin: 0; font-size: 16px; text-align: left; mso-line-height-alt: 32px;"><span style="font-size:16px;">{{ FullName}}</span></p>
-																		<p style="margin: 0; font-size: 16px; text-align: left; mso-line-height-alt: 32px;">{{ mobile }}</p>
+																		<p style="margin: 0; font-size: 16px; text-align: left; mso-line-height-alt: 32px;"><span style="font-size:16px;"> {{mobile}}</span></p>
+																		<p style="margin: 0; font-size: 16px; text-align: left; mso-line-height-alt: 32px;">{{ email }}</p>
 																		<p style="margin: 0; font-size: 16px; text-align: left; mso-line-height-alt: 32px;">{{message }}</p>
 																	</div>
 																</div>
@@ -254,13 +252,11 @@
 														<tr>
 															<td class="pad" style="padding-bottom:40px;padding-left:30px;padding-right:30px;padding-top:40px;">
 																<div style="font-family: sans-serif">
-																	<div class style="font-size: 14px; font-family: Arial, Helvetica Neue, Helvetica, sans-serif; mso-line-height-alt: 21px; color: #2f2f2f; line-height: 1.5;">
-																		<p style="margin: 0; font-size: 16px; text-align: center; mso-line-height-alt: 24px;"><span style="color:#000000;"><span style><span style="font-size:14px;">Explore More UAE tours and </span></span><span style="font-size:14px;">Outbound</span><span style><span style="font-size:14px;"> Tours&nbsp;</span></span></span></p>
-																	</div>
+																	
 																</div>
 															</td>
 														</tr>
-													</table>
+													</table>e
 												</td>
 											</tr>
 										</tbody>
@@ -269,68 +265,19 @@
 							</tr>
 						</tbody>
 					</table>
-					<table class="row row-6" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-						<tbody>
-							<tr>
-								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #2c7ed2; color: #000000; width: 680px;" width="680">
-										<tbody>
-											<tr>
-												<td class="column column-1" width="50%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;"></td>
-												<td class="column column-2" width="50%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
-													<table class="text_block block-2" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
-														<tr>
-															<td class="pad" style="padding-left:20px;padding-right:20px;">
-																<div style="font-family: sans-serif">
-																	<div class style="font-size: 14px; mso-line-height-alt: 21px; color: #ffffff; line-height: 1.5; font-family: 'Permanent Marker', Impact, Charcoal, sans-serif;">
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 69px;"><span style="font-size:46px;"><span style>20% </span><span style>OFF</span></span></p>
-																	</div>
-																</div>
-															</td>
-														</tr>
-													</table>
-													<table class="text_block block-3" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;">
-														<tr>
-															<td class="pad" style="padding-bottom:10px;padding-left:20px;padding-right:20px;padding-top:10px;">
-																<div style="font-family: sans-serif">
-																	<div class style="font-size: 14px; mso-line-height-alt: 21px; color: #ffffff; line-height: 1.5; font-family: Arial, Helvetica Neue, Helvetica, sans-serif;">
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 24px;"><span style="font-size:16px;">Evening Desert Safari</span></p>
-																		<p style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 21px;"><strong><em><span style="font-size:16px;">( USE CODE: ANT2022)</span></em></strong></p>
-																	</div>
-																</div>
-															</td>
-														</tr>
-													</table>
-													<table class="button_block block-4" width="100%" border="0" cellpadding="10" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-														<tr>
-															<td class="pad">
-																<div class="alignment" align="center">
-																	<!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://www.arabiannightstours.com" style="height:38px;width:151px;v-text-anchor:middle;" arcsize="0%" stroke="false" fillcolor="#2f2f2f"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:14px"><![endif]--><a href="http://www.arabiannightstours.com" target="_blank" style="text-decoration:none;display:inline-block;color:#ffffff;background-color:#2f2f2f;border-radius:0px;width:auto;border-top:0px solid transparent;font-weight:400;border-right:0px solid transparent;border-bottom:0px solid transparent;border-left:0px solid transparent;padding-top:5px;padding-bottom:5px;font-family:Arial, Helvetica Neue, Helvetica, sans-serif;text-align:center;mso-border-alt:none;word-break:keep-all;"><span style="padding-left:40px;padding-right:40px;font-size:14px;display:inline-block;letter-spacing:1px;"><span dir="ltr" style="word-break: break-word;"><span style="line-height: 28px;" dir="ltr" data-mce-style>Book Now</span></span></span></a>
-																	<!--[if mso]></center></v:textbox></v:roundrect><![endif]-->
-																</div>
-															</td>
-														</tr>
-													</table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
+					
 					<table class="row row-7" align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 						<tbody>
 							<tr>
 								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #0056ae; color: #000000; width: 680px;" width="680">
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: green; color: #000000; width: 680px;" width="680">
 										<tbody>
 											<tr>
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-top: 5px; padding-bottom: 5px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
 													<table class="image_block block-2" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 														<tr>
 															<td class="pad" style="width:100%;padding-right:0px;padding-left:0px;padding-top:20px;">
-																<div class="alignment" align="center" style="line-height:10px"><a href="https://arabiannightstours.com" target="_blank" style="outline:none" tabindex="-1"><img src="https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/879164_863341/editor_images/0bfe9f3d-d349-4dce-afb0-7954350dd6f4.png" style="display: block; height: auto; border: 0; width: 170px; max-width: 100%;" width="170" alt="Yourlogo Light" title="Yourlogo Light"></a></div>
+																<div class="alignment" align="center" style="line-height:10px"><a href="https://arabianknightstours.com" target="_blank" style="outline:none" tabindex="-1"><img src="https://arabianknightstours.com/static/assets/img/akt_logo_l.png" style="display: block; height: auto; border: 0; width: 170px; max-width: 100%;" width="170" alt="Yourlogo Light" title="Yourlogo Light"></a></div>
 															</td>
 														</tr>
 													</table>
@@ -374,7 +321,7 @@
 						<tbody>
 							<tr>
 								<td>
-									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #d2030e; color: #000000; width: 680px;" width="680">
+									<table class="row-content stack" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #1f5f02; color: #000000; width: 680px;" width="680">
 										<tbody>
 											<tr>
 												<td class="column column-1" width="100%" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-top: 0px; padding-bottom: 20px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;">
@@ -416,8 +363,8 @@
 																			<table class="icons-inner" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; display: inline-block; margin-right: -4px; padding-left: 0px; padding-right: 0px;" cellpadding="0" cellspacing="0" role="presentation">
 																				<!--<![endif]-->
 																				<tr>
-																					<td style="vertical-align: middle; text-align: center; padding-top: 5px; padding-bottom: 5px; padding-left: 5px; padding-right: 6px;"><a href="https://www.designedwithbee.com/" target="_blank" style="text-decoration: none;"><img class="icon" alt="Designed with BEE" src="" height="32" width="34" align="center" style="display: block; height: auto; margin: 0 auto; border: 0;"></a></td>
-																					<td style="font-family: Arial, Helvetica Neue, Helvetica, sans-serif; font-size: 15px; color: #9d9d9d; vertical-align: middle; letter-spacing: undefined; text-align: center;"><a href="https://www.designedwithbee.com/" target="_blank" style="color: #9d9d9d; text-decoration: none;">Designed By QAM</a></td>
+																					
+																					
 																				</tr>
 																			</table>
 																		</td>
