--- a/outbounds/templates/outbounds/outbounds-details.html
+++ b/outbounds/templates/outbounds/outbounds-details.html
@@ -473,7 +473,7 @@
                 <div class="col-lg-12">
                     
                     <div class="promotional_tour_slider owl-theme owl-carousel dot_style">
-                        {% for city in outbounds_filter %}
+                        {% for city in outbounds %}
                         <div class="top_destinations_box img_hover">
                             <div class="heart_destinations">
                                 <i class="fas fa-heart"></i>
